# dart_auto_gui

./: .gitignore  LICENSE  pubspec.yaml
lib/: dart_auto_gui.dart
lib/src/: models.dart  mouse.dart  native_lib.dart
lib/src/helpers/: _lerpDouble.dart  curves.dart  geometry.dart  hash_codes.dart  helpers.dart  object.dart
lib/src/keyboard/: keyboard.dart  keyboard_keys.dart
test/: dart_auto_gui_test.dart
tools/: build_native.dart
windows/: CMakeLists.txt
windows/include/dart_auto_gui_windows/: keyboard.h  keyboard_keys.h  mouse.h  utils.h
windows/include/dart_auto_gui_windows/mouse/: mouse.h
windows/src/: dart_auto_gui_windows.cpp  keyboard.cpp  keyboard_keys.cpp  mouse.cpp  utils.cpp
windows/src/mouse/: mouse.cpp
